// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton -> Custom Component item icerisinde cagirilan skeleton icin snapshot eslesmeli 1`] = `
<View
  style={
    {
      "alignItems": undefined,
      "backgroundColor": undefined,
      "bottom": undefined,
      "flex": undefined,
      "flexDirection": "column",
      "flexGrow": undefined,
      "gap": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "overflow": undefined,
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "paddingVertical": undefined,
      "position": undefined,
      "right": undefined,
      "top": undefined,
      "width": undefined,
      "zIndex": undefined,
    }
  }
  testID="item-test-id"
>
  <View
    backgroundColor="rgba(234, 239, 240, 1)"
    borderRadius={4}
    height={16}
    overflowHidden={true}
    style={
      {
        "alignItems": undefined,
        "backgroundColor": "rgba(234, 239, 240, 1)",
        "bottom": undefined,
        "flex": undefined,
        "flexDirection": "column",
        "flexGrow": undefined,
        "gap": undefined,
        "height": 31,
        "justifyContent": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": 31,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "overflow": "hidden",
        "paddingBottom": undefined,
        "paddingHorizontal": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "paddingVertical": undefined,
        "position": undefined,
        "right": undefined,
        "top": undefined,
        "width": 154,
        "zIndex": undefined,
      }
    }
    testID="skeleton-test-id"
    width={80}
  >
    <View
      collapsable={false}
      style={
        {
          "bottom": 0,
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": -154,
            },
          ],
        }
      }
    >
      <BVLinearGradient
        colors={
          [
            4293586928,
            4294967295,
            4293586928,
          ]
        }
        endPoint={
          {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          {
            "x": 0,
            "y": 0,
          }
        }
        style={
          {
            "height": 31,
            "width": 154,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Skeleton -> Custom Component skeleton snapshotı ile eşleşmeli 1`] = `
<View
  backgroundColor="rgba(234, 239, 240, 1)"
  borderRadius={4}
  height={16}
  overflowHidden={true}
  style={
    {
      "alignItems": undefined,
      "backgroundColor": "rgba(234, 239, 240, 1)",
      "bottom": undefined,
      "flex": undefined,
      "flexDirection": "column",
      "flexGrow": undefined,
      "gap": undefined,
      "height": 31,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": 31,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "overflow": "hidden",
      "paddingBottom": undefined,
      "paddingHorizontal": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "paddingVertical": undefined,
      "position": undefined,
      "right": undefined,
      "top": undefined,
      "width": 154,
      "zIndex": undefined,
    }
  }
  testID="skeleton-test-id"
  width={80}
>
  <View
    collapsable={false}
    style={
      {
        "bottom": 0,
        "flexDirection": "row",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": [
          {
            "translateX": -154,
          },
        ],
      }
    }
  >
    <BVLinearGradient
      colors={
        [
          4293586928,
          4294967295,
          4293586928,
        ]
      }
      endPoint={
        {
          "x": 1,
          "y": 0,
        }
      }
      locations={null}
      startPoint={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "height": 31,
          "width": 154,
        }
      }
    />
  </View>
</View>
`;
